--- a/FYProject1/Views/User/UserGuestUpdate.cshtml
+++ b/FYProject1/Views/User/UserGuestUpdate.cshtml
@@ -1,18 +1,24 @@
-﻿@model FYProject1Classes.UserMgmt.User
+﻿@using FYProject1Classes
+@using FYProject1Classes.UserMgmt
+@model FYProject1Classes.UserMgmt.User
 
 @{
-    ViewBag.Title = "UserEdit";
-    Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    ViewBag.Title = "UserGuestUpdate";
+    Layout = "~/Views/Shared/_MainLayout.cshtml";
+    User user = (User)Session[WebUtil.CURRENT_USER];
 }
 
-<h3 class="list-group-item-heading text-center notextselect">User Managment</h3>
-<div class="col-lg-9">
-    @using (Html.BeginForm("UserEdit", "User", FormMethod.Post, new { id = "usereditform", enctype = "multipart/form-data" }))
+<h2 class="list-group-item-heading text-center notextselect">User Update: <b> @user.FullName </b></h2>
+
+<div class="col-lg-8">
+
+    @using (Html.BeginForm())
     {
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>Edit User Details</h4>
+            <h4>You Want to Update your Info @user.FullName ?</h4>
+            <img src="@user.UserImage.First()" />
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
@@ -57,50 +63,11 @@
                 </div>
             </div>
 
-            @*<div class="form-group">
-                    @Html.LabelFor(model => model.CityId, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.CityId, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.CityId, "", new { @class = "text-danger" })
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    @Html.LabelFor(model => model.CityId.Country, htmlAttributes: new { @class = "control-label col-md-2" })
-                    <div class="col-md-10">
-                        @Html.EditorFor(model => model.CityId.Country, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.CityId.Country, "", new { @class = "text-danger" })
-                    </div>
-                </div>*@
-
-            @*-----------------------DROP DOWN ALERT-------------------------*@
-
-            <div class="form-group">
-                <div class="form-inline" style="margin-left:161px">
-                    <div id="countrydiv" style="float:left;padding-right:5px">
-                        @Html.DropDownList("CountryList", (IEnumerable<SelectListItem>)ViewBag.CountryList, "- Country -", new { @class = "form-control" })
-                    </div>
-                    <div id="citydiv" style="float:left;">
-                    </div>
-                    <div class="clearsec"></div>
-                </div>
-            </div>
-
-            @*------------------------------------------------*@
-
             <div class="form-group">
                 @Html.LabelFor(model => model.BirthDate, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.EditorFor(model => model.BirthDate, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.BirthDate, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
-                @Html.LabelFor(model => model.IsActive, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.IsActive, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.IsActive, "", new { @class = "text-danger" })
                 </div>
             </div>
 
@@ -157,43 +124,11 @@
             </div>
 
             <div class="form-group">
-                @Html.LabelFor(model => model.Role, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Role.Id, new { htmlAttributes = new { @class = "form-control", @type = "number", min = "1", max = "2", name = "roleId" } })
-                    @Html.ValidationMessageFor(model => model.Role.Id, "", new { @class = "text-danger" })
-                </div>
-            </div>
-
-            <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Save" class="btn btn-default" />
-                    @Html.ActionLink("Back to List", "UserManagment")
+                    <a href="@Url.Action("Index","Home")" class="btn btn-info">HOME</a>
                 </div>
             </div>
         </div>
     }
-    <br />
-    <br />
 </div>
-
-@section MyScript {
-    <script src="~/Scripts/jquery-2.2.3.min.js"></script>
-    <script src="~/Scripts/jquery-ui.min.js"></script>
-    <script type="text/javascript">
-
-        $(function () {
-            $("#CountryList").change(function () {
-                var cityid = $(this).select("option:selected").val();
-                $.ajax(
-                    {
-                        url: "/User/CityLists/" + cityid,
-                        type: "get",
-                        success: function (result) {
-                            $("#citydiv").html(result);
-                        }
-                    });
-
-            });
-        });
-    </script>
-}
