--- a/FYProject1/Views/User/UserGuestUpdate.cshtml
+++ b/FYProject1/Views/User/UserGuestUpdate.cshtml
@@ -6,11 +6,28 @@
     ViewBag.Title = "UserGuestUpdate";
     Layout = "~/Views/Shared/_MainLayout.cshtml";
     User user = (User)Session[WebUtil.CURRENT_USER];
+    var msg = ViewBag.msg;
 }
+
+
 
 <h2 class="list-group-item-heading text-center notextselect">User Update: <b> @user.FullName </b></h2>
 
 <div class="col-lg-8">
+    @if (msg != null && msg == "Update Success")
+    {
+        <div class="alert alert-success alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <strong>YAY!</strong> @ViewBag.msg
+        </div>
+    }
+    else if (msg != null)
+    {
+        <div class="alert alert-danger alert-dismissible" role="alert">
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <strong>ERROR!</strong> @ViewBag.msg
+        </div>
+    }
 
     @using (Html.BeginForm())
     {
@@ -126,7 +143,7 @@
             <div class="form-group">
                 <div class="col-md-offset-2 col-md-10">
                     <input type="submit" value="Save" class="btn btn-default" />
-                    <a href="@Url.Action("Index","Home")" class="btn btn-info">HOME</a>
+                    <a href="@Url.Action("Index", "Home")" class="btn btn-info">HOME</a>
                 </div>
             </div>
         </div>
