Update: Overall Code Update
Code update with minor fixes, formating and Code Refactoring.
Proper Working!

--- a/FYProject1/Views/Shared/_AdminLayout.cshtml
+++ b/FYProject1/Views/Shared/_AdminLayout.cshtml
@@ -119,10 +119,10 @@
                     <h3 class="list-group-item-heading text-center">ADMIN OPTI<i class="fa fa-gear fa-spin"></i>NS</h3>
                     @Html.ActionLink("Overview", "AdminPanel", "Admin", null, new { @class = "list-group-item" })
                     <a href="@Url.Action("AddProduct","Product")" class="list-group-item">ADD PRODUCT <i class="fa fa-plus"></i></a>
-                    <a href="@Url.Action("ProductManagment","Product")" class="list-group-item"><i class="badge" style="font-size:x-small; margin-top:2px">@ViewBag.productcount</i> Manage Products <i class="fa fa-camera"></i></a>
+                    <a href="@Url.Action("ProductManagment","Product")" class="list-group-item"> Manage Products <i class="fa fa-camera"></i><i class="badge" style="font-size:x-small; margin-top:2px">@Html.Action("GetProductCount", "Product")</i></a>
                     <a href="@Url.Action("UserManagment","User")" class="list-group-item"> User managment <i class="fa fa-group"></i><i class="badge" style="font-size:x-small;margin-top:2px">@Html.Action("UserCount", "User")</i></a>
                     <a href="#" class="list-group-item">Placed Order <i class="fa fa-cart-arrow-down"></i></a>
-                    <a href="@Url.Action("BannerManagment","Admin")" class="list-group-item"><i class="badge" style="font-size:x-small;margin-top:2px">@ViewBag.bannercount</i> Main Page Banners <span class="fa fa-image"></span></a>
+                    <a href="@Url.Action("BannerManagment","Admin")" class="list-group-item"> Main Page Banners <span class="fa fa-image"></span><i class="badge" style="font-size:x-small;margin-top:2px">@Html.Action("GetBannerCount", "Admin")</i></a>
                     <a href="@Url.Action("LocationManagment","Location")" class="list-group-item">Location Managment <span class="fa fa-map-marker"></span><span class="badge" style="font-size:x-small;margin-top:2px">@Html.Action("GetCountriesCount", "Location")</span></a>
                 </div>
             </div>
